# thread_vk

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
